--- a/C#/BeamNGModsUpdateChecker/BeamNGModsUpdateChecker.csproj
+++ b/C#/BeamNGModsUpdateChecker/BeamNGModsUpdateChecker.csproj
@@ -71,6 +71,7 @@
       <HintPath>..\packages\RestSharp.104.3.3\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
