--- a/C#/BeamNGModsUpdateChecker/BeamNGModsUpdateChecker.csproj
+++ b/C#/BeamNGModsUpdateChecker/BeamNGModsUpdateChecker.csproj
@@ -103,7 +103,6 @@
       <DependentUpon>FrmOptions.cs</DependentUpon>
     </Compile>
     <Compile Include="JSONClasses.cs" />
-    <Compile Include="PassEncrDecr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="strings.Designer.cs">
@@ -161,9 +160,7 @@
   <ItemGroup>
     <Content Include="icon.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y "$(ProjectDir)$(OutDir)$(TargetFileName)" "$(SolutionDir)\..\Install\Release\"
