Now automatic updating is a toggleable feature (closed #8)

--- a/C#/BeamNGModsUpdateChecker/app.config
+++ b/C#/BeamNGModsUpdateChecker/app.config
@@ -28,6 +28,9 @@
             <setting name="MainFormHeight" serializeAs="String">
                 <value>456</value>
             </setting>
+            <setting name="AutomaticallyCheckForUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
         </BeamNGModsUpdateChecker.Properties.Settings>
     </userSettings>
 </configuration>
