--- a/C#/BeamNGModsUpdateChecker/Properties/Settings.settings
+++ b/C#/BeamNGModsUpdateChecker/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="MainFormHeight" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">456</Value>
     </Setting>
+    <Setting Name="AutomaticallyCheckForUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
